Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-1171

Crash report: http_ui cache lookup, double free

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 3.1.4
    • 3.1.4
    • Core
    • None

    Description

      *** glibc detected *** /opt/ats/bin/traffic_server: double free or corruption (!prev): 0x00000000013e9a50 ***
      ======= Backtrace: =========
      /lib64/libc.so.6(+0x77856)[0x2b14ef973856]
      /lib64/libc.so.6(cfree+0x6c)[0x2b14ef97774c]
      /opt/ats/bin/traffic_server(ShowCache::~ShowCache()+0x20)[0x6428c0]
      /opt/ats/bin/traffic_server(ShowCont::done(int, int, void*)+0x23)[0x5e1c63]
      /opt/ats/bin/traffic_server(ShowCache::handleCacheEvent(int, Event*)+0x15d7)[0x641ee7]
      /opt/ats/bin/traffic_server(Cache::open_read(Continuation*, INK_MD5*, CacheFragType, char*, int)+0x42c)[0x64e62c]
      /opt/ats/bin/traffic_server(ShowCache::lookup_url(int, Event*)+0x1a5)[0x63f655]
      /opt/ats/bin/traffic_server(EThread::process_event(Event*, int)+0x90)[0x6a6350]
      /opt/ats/bin/traffic_server(EThread::execute()+0x31b)[0x6a6c3b]
      /opt/ats/bin/traffic_server[0x6a5142]
      /lib64/libpthread.so.0(+0x8e2c)[0x2b14ed0f5e2c]
      /lib64/libc.so.6(clone+0x6d)[0x2b14ef9d63cd]
      

      Attachments

        Activity

          People

            zym Zhao Yongming
            zym Zhao Yongming
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: