TS-1171: http_ui cache lookup, double free

This is a fix for the change included in
bd304288b55e989ff94819818aae93c48cc0c685